<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ivan_pc.calculator.MainActivity"
    android:background="#EEEEEE">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        tools:text="sdfkghsdkfjghksdfjg"
        android:textSize="20sp"
        android:gravity="end|center"
        android:textColor="#252850"
        android:paddingRight="4dp"
        android:id="@+id/TextUpLine"/>

    <TextView
        android:layout_weight="2.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="35sp"
        android:paddingBottom="12dp"
        tools:text="sldlsdjfhlsdhjfg"
        android:paddingRight="8dp"
        android:gravity="end|bottom"
        android:textColor="#0E294B"
        android:id="@+id/TextLine"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            style="@style/RegularPortButton"
            android:text="@string/DeleteAll"
            android:onClick="deleteAllPressed"/>
        <Button
            style="@style/RegularPortButton"
            android:text="@string/DeleteOne"
            android:onClick="deleteOnePressed"/>
        <Button
            style="@style/RegularPortButton"
            android:text="@string/ParenthesisLeft"
            android:onClick="parenthesisLeftPressed"/>
        <Button
            style="@style/RegularPortButton"
            android:text="@string/ParenthesisRight"
            android:onClick="parenthesisRightPressed"/>
        <Button
            style="@style/RegularPortButton"
            android:text="@string/MathPI"
            android:onClick="mathConstPressed"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            style="@style/RegularPortButton"
            android:text="@string/MathSIN"
            android:onClick="unaryOperationPressed"/>
        <Button
            style="@style/RegularPortButton"
            android:text="@string/sqrt"
            android:onClick="unaryOperationPressed"/>
        <Button
            style="@style/RegularPortButton"
            android:text="@string/sqr"
            android:onClick="sqrPressed"/>
        <Button
            style="@style/RegularPortButton"
            android:text="@string/power"
            android:onClick="powerOperationPressed"/>
        <Button
            style="@style/RegularPortButton"
            android:text="@string/division"
            android:onClick="binaryOperationPressed"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            style="@style/RegularPortButton"
            android:text="@string/MathCOS"
            android:onClick="unaryOperationPressed"/>
        <Button
            style="@style/RegularPortButton"
            android:text="@string/Number7"
            android:onClick="numberPressed"/>
        <Button
            style="@style/RegularPortButton"
            android:text="@string/Number8"
            android:onClick="numberPressed"/>
        <Button
            style="@style/RegularPortButton"
            android:text="@string/Number9"
            android:onClick="numberPressed"/>
        <Button
            style="@style/RegularPortButton"
            android:text="@string/Multiplication"
            android:onClick="binaryOperationPressed"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            style="@style/RegularPortButton"
            android:text="@string/MathTAN"
            android:onClick="unaryOperationPressed"/>
        <Button
            style="@style/RegularPortButton"
            android:text="@string/Number4"
            android:onClick="numberPressed"/>
        <Button
            style="@style/RegularPortButton"
            android:text="@string/Number5"
            android:onClick="numberPressed"/>
        <Button
            style="@style/RegularPortButton"
            android:text="@string/Number6"
            android:onClick="numberPressed"/>
        <Button
            style="@style/RegularPortButton"
            android:text="@string/Minus"
            android:onClick="minusPressed"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            style="@style/RegularPortButton"
            android:text="@string/MathLN"
            android:onClick="unaryOperationPressed"/>
        <Button
            style="@style/RegularPortButton"
            android:text="@string/Number1"
            android:onClick="numberPressed"/>
        <Button
            style="@style/RegularPortButton"
            android:text="@string/Number2"
            android:onClick="numberPressed"/>
        <Button
            style="@style/RegularPortButton"
            android:text="@string/Number3"
            android:onClick="numberPressed"/>
        <Button
            style="@style/RegularPortButton"
            android:text="@string/Plus"
            android:onClick="binaryOperationPressed"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            style="@style/RegularPortButton"
            android:text="@string/MathLG"
            android:onClick="unaryOperationPressed"/>
        <Button
            style="@style/RegularPortButton"
            android:text="@string/MathE"
            android:onClick="mathConstPressed"/>
        <Button
            style="@style/RegularPortButton"
            android:text="@string/Number0"
            android:onClick="numberPressed"/>
        <Button
            style="@style/RegularPortButton"
            android:text="@string/Point"
            android:onClick="pointPressed"/>
        <Button
            style="@style/EquationPortButton"
            android:text="@string/Equation"
            android:onClick="equationPressed"/>
    </LinearLayout>
</LinearLayout>
